# Continuing-Education

./: .gitignore  IntroPresentation.pptx  Spec.docx  Week_0.ipynb  ~$IntroPresentation.pptx
Classification Models/: Week_6.ipynb  Week_6_Solutions.ipynb
Data Science/Classification Models/: Week_6.ipynb
Data Science/Dash Demo/: app.py
Data Science/Data Visualisation/: Titanic_Midterm.ipynb  model_test.csv
Data Science/Developer Tools & Final Project/: Final_project.md  Git_VEs_Docker.pptx
Data Science/Dimension Reduction, Regression and Ensemble Models/: Week_8.ipynb
Data Science/Neural Networks/: Week9.ipynb  (+1 more)
Data Visualisation/: Week_3.ipynb
Developer Tools & Final Project/: Git_VEs_Docker.pptx  adult.csv
Dimension Reduction, Regression and Ensemble Models/: lots_of_features.csv
Fundamentals/Week 10 - Final Project/: .pre-commit-config.yaml  LICENCE  README.md  main.py  pyproject.toml  requirements.txt
Fundamentals/Week 10 - Final Project/src/: __init__.py  deck.py  game.py  player.py
Fundamentals/Week 10 - Final Project/tests/: test_deck.py  test_example.py  test_player.py
Intro to Python/: IntroPresentation.pptx  NNTheory.pptx  Week_1.ipynb
Introduction to ML/: Intro to Machine Learning.pptx  Midterm_Solutions.ipynb  Week_5.ipynb
NLP/: Natural_Language_Processing.ipynb
Neural Networks/: NNTheory.pptx  Week9.ipynb
Numpy, Pandas and Scipy/: Week_2.ipynb
Week_0/: IntroPres.pptx  Spec.docx
Week_1/: Week_2.ipynb  housing.csv  io_test.csv
Week_2/: Titanic_Workbook.ipynb  model_test.csv  stocks.csv  world_bank.csv
Week_3/: Week_5.ipynb
(+22 files in other folders)
